integrate with mac workshop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ if (APPLE)
   SET(CMAKE_CXX_FLAGS "-framework Cocoa -framework OpenGL -framework IOKit")
   set(CMAKE_OSX_SYSROOT /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk)
   set(GLAD_DIR /Users/Kevin/Development/OpenGL/glad/)
+  set(INCLUDE_DIRS "/Users/Kevin/Development/OpenGL/")
   find_package(glfw3 REQUIRED)  
 elseif (WIN32)
   set(GLAD_DIR "C:/Users/liqilong/Desktop/OpenGL/glad/")
-  set(GLM_LIBRARY "C:/Users/liqilong/Desktop/OpenGL/lib/glm.lib")
   set(GLFW3_LIBRARY "C:/Users/liqilong/Desktop/OpenGL/lib/glfw3.lib")
   set(GLFW3_INCLUDE_DIR "C:/Users/liqilong/Desktop/OpenGL/include")
 endif()
@@ -22,6 +22,7 @@ file(GLOB HEADER_FILES "src/*.h")
 include_directories(
   ${GLFW3_INCLUDE_DIR}
   ${GLAD_DIR}/include
+  ${INCLUDE_DIRS}
   )
 
 list(APPEND SOURCE_FILES
